# dotfiles3

./: .gitignore  .nixd.json  .nixd.nix  CLAUDE.md  README.md  dafny_deps.json  default.nix  flake.nix  nixd-entry.nix  pyproject.toml  readme.md
.github/actions/build_nix/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
docker/: override.conf
emacs/: .emacs  agent_work_template.el  alan-base-bindings.el  alan-base-bindings.example.el  alan-bindings.el  alan-codeium.el  alan-comint.el  alan-commands.el  alan-company.el  alan-completion-styles.el  alan-config.el  alan-consult.el  alan-core.el  alan-csharp.el  alan-cxx.el  alan-dafny.el  alan-dired.el  alan-docker.el  alan-early-init.el  alan-eldoc.el  alan-elisp.el  alan-elpaca.el  alan-embark.el  alan-evil-surround.el  alan-evil.el  alan-experimental.el  alan-flycheck.el  alan-flyspell.el  alan-font.el  alan-format-all.el  alan-gpt.el  alan-hl-line.el  alan-iflipb.el  alan-info.el  alan-js.el  alan-jump.el  alan-latex.el  alan-lilypond.el  alan-lsp.el  alan-macros.el  (+42 more)
js/: default.nix  package.json
nix/: ci.nix  command.nix  cxx.nix  debug.nix  default.nix  deps.nix  env.nix  experimental.nix  flake-attrs.nix  fonts.nix  home.nix  latex.nix  local.nix  make_nix_wrapper.py  misc.nix  nixtools.nix  package-bootstrap.nix  package.nix  prelude.nix  printing-overlay.nix  profile-root.nix  profile.nix  repl.nix  setup_nix.sh  source.nix  test.nix  version.nix
nix/tests/: .envrc  nix_instantiate.py
python/: .envrc  buildSystemOverrides.nix  default.nix  pyproject.toml
python/ipython_config/: ipython_config.py
rust/: Cargo.toml  default.nix  rustfmt.toml
rust/rust-src-hack/: Cargo.toml  rust-src-workspace.toml
scripts/: .envrc  Dockerfile.simple  builddocker.sh  ci_nix_build.py  nix-clean-roots.py  process_git_hist.py  rundocker.py  rundocker.sh
vim/: .vimrc
windows/: .gitconfig  .wslconfig  README.md  setup_in_wsl.sh  setup_windows.py  setup_windows.vbs  wsl.conf
