[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = []

[tool.pyright]
exclude = ["**/result*"]
typeCheckingMode = "standard"

# nix run ..#poetry -- add abc --lock

# upgrade using
# nix run ..#poetry -- lock
# nix run ..#poetry -- up --latest --no-install
[tool.poetry.dependencies]
python = ">=3.10,<3.14"

pip = "^25.1.1"
pipdeptree = "^2.26.1"
ipython = "==8.*"

poetry = "^2.1.3"
poetry-plugin-shell = "^1.0.1"
poetry-plugin-up = "^0.9.0"

autoflake = "^2.3.1"
black = { version = "^25.1.0", extras = ["d"] }
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pylint = "^3.3.7"

# build deps
hatchling = "^1.27.0"
pybind11 = "^2.13.6"
pytest-mock = "^3.14.0"
setuptools = "^80.3.1"
uv-dynamic-versioning = "^0.7.0"

# libraries
PyMuPDF = "^1.25.5"
Pygments = "^2.19.1"
beartype = "^0.20.2"
cchardet = "^2.1.7"
colorama = "^0.4.6"
decompyle3 = "^3.9.2"
git-filter-repo = "^2.47.0"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
pint = "^0.24.4"
pulp = "^3.1.1"
pygit2 = "^1.18.0"
pyparsing = "^3.2.3"
python-magic = "^0.4.27"
rich = "^14.0.0"
sympy = "^1.14.0"
uncompyle6 = "^3.9.2"

# sync with nixpkgs due to patch
weasyprint = "==62.3"

xdis = { git = "https://github.com/rocky/python-xdis.git" }
# https://github.com/extremecoders-re/pyinstxtractor

RegexFactory = { git = 'https://github.com/Alan-Chen99/RegexFactory.git' }

simple-parsing = { git = "https://github.com/lebrice/SimpleParsing.git", rev = "refs/pull/345/head" }

# FIXME 2/12/2025: latest does not build, these are from poetry2nix tests
pyqt6 = "==6.5.2"
pyqt6-qt6 = "==6.5.2"

# things jax
jax = { version = "^0.6.0", extras = ["cuda"] }
oryx = "^0.2.9"
equinox = "^0.12.1"
sympy2jax = "^0.0.7"
jaxtyping = "^0.3.2"
optax = "^0.2.4"

# for tests
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
hypothesis = "^6.131.9"

# misc
meson = "^1.8.0"
nixpkgs = "^0.2.4"

yt-dlp = "^2025.4.30"
# youtube_dl = { git = "https://github.com/ytdl-org/youtube-dl.git" }

factorio-draftsman = "^2.0.2"
vcstool2 = "^0.4.5"
