[project]
name = "dotfiles"
version = "0.1.0"
requires-python = ">=3.11, < 3.14"
dependencies = [
  #
  # build deps
  "cmake>=4.0.3",
  "cython>=3.1.3",
  "hatchling>=1.27.0",
  "pip>=25.2",
  "pybind11>=3.0.1",
  "pylint>=3.3.8",
  "setuptools>=80.9.0",
  "wheel>=0.45.1",
  #
  # python tools
  "autoflake>=2.3.1",
  "basedpyright>=1.31.3",
  "black>=25.1.0",
  "flake8>=7.3.0",
  "hypothesis>=6.138.8",
  "ipython>=9.5.0",
  "isort>=6.0.1",
  "mypy>=1.17.1",
  "pipdeptree>=2.28.0",
  "pyright>=1.1.404",
  "pytest-cov>=6.2.1",
  "pytest>=8.4.1",
  #
  # applications (other)
  "diceware>=1.0.1",
  "yt-dlp>=2025.8.27",
  #
  # libraries (commonly used / general)
  "cappa>=0.30.0",
  "matplotlib>=3.10.6",
  "pygit2>=1.18.2",
  "regexfactory",
  "rich>=14.1.0",
  "simple-parsing>=0.1.7",
  "sympy>=1.14.0",
  "z3-solver>=4.15.3.0",
  #
  # libraries (numerical and ml)
  "numpy>=2.3.2",
  # "torch>=2.8.0",
  # "torchvision>=0.23.0",
  #
  # other libraries
  "simple-crypt>=4.1.7",
]

# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# explicit = true

[tool.uv.sources]
# torch = [{ index = "pytorch-cpu" }]
# torchvision = [{ index = "pytorch-cpu" }]
regexfactory = { git = "https://github.com/Alan-Chen99/RegexFactory.git" }
