[project]
name = "dotfiles"
version = "0.1.0"
requires-python = ">=3.11, < 3.14"
dependencies = [
  #
  # build deps
  "cmake>=4.0.3",
  "cython>=3.1.3",
  "hatchling>=1.27.0",
  "pip>=25.2",
  "pybind11>=3.0.1",
  "pylint>=3.3.8",
  "setuptools>=80.9.0",
  "wheel>=0.45.1",
  #
  # python tools
  "autoflake>=2.3.1",
  "basedpyright>=1.31.3",
  "black>=25.1.0",
  "flake8>=7.3.0",
  "hypothesis>=6.138.8",
  "ipython>=9.5.0",
  "isort>=6.0.1",
  "mypy>=1.17.1",
  "pipdeptree>=2.28.0",
  "pyright>=1.1.404",
  "pytest-cov>=6.2.1",
  "pytest>=8.4.1",
  #
  # applications
  "diceware>=1.0.1",
  "mcp-proxy>=0.9.0",
  "yt-dlp>=2025.9.26",
  #
  # libraries
  "cappa>=0.30.0",
  "cchardet>=2.2.0a2",
  "fastapi>=0.119.1",
  "matplotlib>=3.10.6",
  "numpy>=2.3.2",
  "openai>=2.6.0",
  "pydantic>=2.12.1",
  "pygit2>=1.18.2",
  "pygments>=2.19.2",
  "pypdf2>=3.0.1",
  "python-magic>=0.4.27",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0.2",
  "regexfactory",
  "requests>=2.32.5",
  "rich>=14.1.0",
  "simple-crypt",
  "simple-parsing>=0.1.7",
  "sympy>=1.14.0",
  "uvicorn[standard]>=0.37.0",
  "z3-solver>=4.15.3.0",
  #
  # "torch>=2.8.0",
  # "torchvision>=0.23.0",
  #
  "langchain-community>=0.4.1",
  "langchain-openai>=1.0.1",
  "langchain>=1.0.2",
  "langgraph>=1.0.1",
  "langsmith>=0.4.38",
]

# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# explicit = true

[tool.uv.sources]
# torch = [{ index = "pytorch-cpu" }]
# torchvision = [{ index = "pytorch-cpu" }]
regexfactory = { git = "https://github.com/Alan-Chen99/RegexFactory.git" }
simple-crypt = { git = "https://github.com/KyleKing/simple-crypt.git" }
