[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.19.0"
checked_command = "0.2.4"
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.4"
docker-api = "0.14.0"
futures-util = "0.3.31"
nix = { version = "0.30.1", features = ["user"] }
pin-project = "1.1.10"
tokio = { version = "1.45.1", features = ["io-std", "signal"] }
